Refactor project.clj in order to be able to use lein browser-repl
The alias differs from the rest as it compiles with :optimizations :simple. This patch adds :simple
to some (commented) test profile and refactors project.clj.